--- a/css/toast.css
+++ b/css/toast.css
@@ -37,7 +37,7 @@
   padding: 12px 20px;
   margin-top: 10px;
   border-radius: 4px;
-  max-width: 200px;
+  max-width: 250px;
   opacity: 0;
 }
 
